add banner slider, product card, banner

--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -25,3 +25,7 @@
   /* Non-prefixed version, currently
                          not supported by any browser */
 }
+
+.visually-hidden {
+  visibility: hidden;
+}
