--- a/src/styles/fonts.scss
+++ b/src/styles/fonts.scss
@@ -25,3 +25,10 @@
   src: url("../fonts/Inter-Bold.ttf") format("ttf");
   font-display: swap;
 }
+
+@font-face {
+  font-family: "Inter-800";
+  font-weight: 800;
+  src: url("../fonts/Inter-ExtraBold.ttf") format("ttf");
+  font-display: swap;
+}
