--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -1,6 +1,11 @@
 @import "variables";
 @import "fonts";
 
+a {
+  text-decoration: none;
+  color: unset;
+}
+
 ul {
   list-style: none;
   margin: 0;
@@ -10,8 +15,21 @@ ul {
 .header {
   &__container {
     padding-top: 20px;
-    height: 110px;
+    height: 180px;
+  }
 
+  &__upper-part {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  &__middle-part {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 19px;
+    padding-bottom: 27px;
     position: relative;
 
     &:after {
@@ -21,21 +39,11 @@ ul {
       height: 2px;
       bottom: 0;
       background: url("../images/decorative_header_line.svg") no-repeat center;
-
     }
   }
 
-  &__upper-part {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-  }
-
   &__lower-part {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin-top: 19px;
+    margin-top: 26px;
   }
 }
 
@@ -96,7 +104,7 @@ ul {
 }
 
 .additional-info {
-  color: $grey;
+  color: $gray;
   font-family: $Inter500;
 
   &__link {
@@ -104,12 +112,12 @@ ul {
   }
 
   &__link a {
-    color: $grey;
+    color: $gray;
     text-decoration: none;
   }
 }
 
-.lower-part {
+.middle-part {
   &__logo {
     width: 15.3%;
     height: 18px;
@@ -155,11 +163,77 @@ ul {
   }
 }
 
+.lower-part {
+  &__category-list {
+    width: 70%;
+    height: 45px;
+
+    display: flex;
+    justify-content: space-between;
+  }
+
+  &__category-link {
+    width: 75px;
+    height: 28px;
+
+    color: $black;
+    text-align: center;
+    font-family: $Inter400;
+    font-size: $text12;
+
+    position: relative;
+
+    &_discount {
+      font-family: $Inter400;
+      font-size: $text12;
+      color: $red;
+    }
+
+    &::after {
+      width: 100%;
+      height: 3px;
+
+      content: '';
+      position: absolute;
+
+      left: 0;
+      bottom: 0;
+      background-color: $violette;
+      border-radius: $border5;
+
+      // Animation
+      transform: scale(0.5, 1);
+      transition: all 0.2s ease;
+      opacity: 0;
+    }
+
+    &:hover::after {
+      // Animation
+      transform: scale(1, 1);
+      opacity: 1;
+    }
+
+    &:active::after {
+      width: 75px;
+      height: 3px;
+
+      content: '';
+      position: absolute;
+
+      left: 0;
+      bottom: 0;
+      background-color: $violette;
+      border-radius: $border5;
+    }
+
+  }
+}
+
 .search {
   border-radius: $border5;
   background-color: $lightGray;
   font-family: $Inter500;
-  color: $grey;
+  color: $gray;
 
   &__input {
     width: 457px;
@@ -201,7 +275,7 @@ ul {
     font-family: $Inter600;
     font-size: $text10;
     text-decoration-line: underline;
-    color: $grey;
+    color: $gray;
 
     background: none;
     border: none;
