--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,19 +1,26 @@
 // colors
 $white: #ffffff;
 $violette: #485CC7;
-$grey: #707F8D;
+$gray: #707F8D;
+$mediumGray: #D0D0D0;
 $lightGray: #F6F7F9;
-
+$red: #FF0000;
+$black: #111215;
+$mediumBlack: #373D42;
 // fonts
 $Inter400: "Inter-400", "Arial", sans-serif;
 $Inter500: "Inter-500", "Arial", sans-serif;
 $Inter600: "Inter-600", "Arial", sans-serif;
 $Inter700: "Inter-700", "Arial", sans-serif;
+$Inter800: "Inter-800", "Arial", sans-serif;
 
 // font-size
 $text6: 0.375rem;
 $text8: 0.5rem;
 $text10: 0.6rem;
+$text12: 0.75rem;
+$text32: 2rem;
 
 // radius
+$border3: 3px;
 $border5: 5px;
