--- a/src/styles/banner.scss
+++ b/src/styles/banner.scss
@@ -7,7 +7,11 @@
     display: flex;
     justify-content: center;
     align-items: center;
+  }
 
+  &__image img {
+    width: 100%;
+    border-radius: $border5;
   }
 
   &__image span {
