--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -14,8 +14,8 @@ ul {
 
 .header {
   &__container {
-    padding-top: 20px;
-    height: 180px;
+    padding-top: 20px !important;
+    height: 100%;
   }
 
   &__upper-part {
@@ -38,7 +38,8 @@ ul {
       width: 100%;
       height: 2px;
       bottom: 0;
-      background: url("../images/decorative_header_line.svg") no-repeat center;
+      background-color: $headerGray;
+      border-radius: $border3;
     }
   }
 
@@ -54,7 +55,7 @@ ul {
   }
 
   &__additional-info {
-    width: 337px;
+    width: 731px;
 
     display: inline-flex;
     justify-content: space-between;
@@ -63,10 +64,10 @@ ul {
 
 .region {
   &__currency {
-    width: 45px;
-    height: 23px;
+    width: 60px;
+    height: 30px;
     border-radius: $border5;
-    font-size: $text8;
+    font-size: $text14;
     margin-right: 22px;
 
     display: inline-flex;
@@ -99,7 +100,7 @@ ul {
   &__country {
     color: $violette;
     font-family: $Inter500;
-    font-size: $text10;
+    font-size: $text16;
   }
 }
 
@@ -108,7 +109,7 @@ ul {
   font-family: $Inter500;
 
   &__link {
-    font-size: $text8;
+    font-size: $text16;
   }
 
   &__link a {
@@ -119,8 +120,8 @@ ul {
 
 .middle-part {
   &__logo {
-    width: 15.3%;
-    height: 18px;
+    width: 148px;
+    height: 22px;
   }
 
   &__logo img {
@@ -129,7 +130,7 @@ ul {
 
   &__category-button {
     width: 12.3%;
-    height: 36px;
+    height: 50px;
   }
 
   &__category-button div {
@@ -137,17 +138,24 @@ ul {
     display: flex;
     justify-content: space-between;
     align-content: center;
+    align-items: center;
   }
 
   &__category-button img {
-    width: 16px;
-    height: 15px;
+    width: 26px;
+    height: 28px;
     border: unset;
+  }
+
+  &__category-button span {
+    font-family: $Inter600;
+    font-weight: 600;
+    font-size: $text16;
   }
 
   &__search {
     width: 49%;
-    height: 37px;
+    height: 50px;
 
     display: inline-flex;
     justify-content: space-between;
@@ -155,8 +163,8 @@ ul {
   }
 
   &__user-details {
-    width: 148px;
-    height: 24px;
+    width: 18.7%;
+    height: 46px;
 
     display: inline-flex;
     justify-content: space-between;
@@ -173,19 +181,18 @@ ul {
   }
 
   &__category-link {
-    width: 75px;
     height: 28px;
 
     color: $black;
     text-align: center;
     font-family: $Inter400;
-    font-size: $text12;
+    font-size: $text18;
 
     position: relative;
 
     &_discount {
       font-family: $Inter400;
-      font-size: $text12;
+      font-size: $text18;
       color: $red;
     }
 
@@ -244,7 +251,7 @@ ul {
     border: none;
     background: none;
 
-    font-size: $text10;
+    font-size: $text16;
   }
 
   &__input:focus {
@@ -252,8 +259,8 @@ ul {
   }
 
   &__icon {
-    width: 47px;
-    height: 25px;
+    width: 60px;
+    height: 40px;
 
     margin-right: 4px;
 
@@ -266,14 +273,14 @@ ul {
   }
 
   &__icon img {
-
+    width: 26px;
   }
 }
 
 .user-details {
   &__authorize {
     font-family: $Inter600;
-    font-size: $text10;
+    font-size: $text16;
     text-decoration-line: underline;
     color: $gray;
 
@@ -281,17 +288,23 @@ ul {
     border: none;
   }
 
+  &__actions-wrapper {
+    display: flex;
+  }
+
   &__favourite {
-    width: 28px;
-    height: 24px;
+    width: 40px;
+    height: 40px;
+
+    margin-right: 20px;
 
     position: relative;
     display: flex;
   }
 
   &__shopping-cart {
-    width: 28px;
-    height: 24px;
+    width: 40px;
+    height: 40px;
 
     position: relative;
     display: flex;
@@ -306,13 +319,13 @@ ul {
   &__item-count {
     width: 17px;
     position: absolute;
-    right: 0;
-    top: 4px;
+    right: 3px;
+    top: 7px;
 
     color: $white;
     text-align: center;
     font-family: $Inter700;
-    font-size: $text6;
+    font-size: $text12;
   }
 }
 
@@ -323,12 +336,12 @@ ul {
   &__item-count {
     width: 17px;
     position: absolute;
-    right: 0;
-    top: 4px;
+    right: -1px;
+    top: 6px;
 
     color: $white;
     text-align: center;
     font-family: $Inter700;
-    font-size: $text6;
+    font-size: $text12;
   }
 }
