--- a/src/styles/slider-banner.scss
+++ b/src/styles/slider-banner.scss
@@ -10,10 +10,13 @@
   align-items: center;
   position: relative;
 
+  &__wrapper {
+    height: 80%;
+    border-radius: $border5;
+  }
+
   &__image {
     width: 100%;
-    border-radius: $border5;
-    object-fit: cover;
   }
 
   &__slide-left {
