--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -2,11 +2,14 @@
 $white: #ffffff;
 $violette: #485CC7;
 $gray: #707F8D;
+$headerGray: #D9D9D9;
 $mediumGray: #D0D0D0;
+$productGray: #BDBDBD;
 $lightGray: #F6F7F9;
 $red: #FF0000;
 $black: #111215;
 $mediumBlack: #373D42;
+$rose: #FB1254;
 // fonts
 $Inter400: "Inter-400", "Arial", sans-serif;
 $Inter500: "Inter-500", "Arial", sans-serif;
@@ -19,6 +22,9 @@ $text6: 0.375rem;
 $text8: 0.5rem;
 $text10: 0.6rem;
 $text12: 0.75rem;
+$text14: 0.875rem;
+$text16: 1rem;
+$text18: 1.125rem;
 $text32: 2rem;
 
 // radius
