add adaptive header, menu. add footer, vertical banner

--- a/src/styles/fonts.scss
+++ b/src/styles/fonts.scss
@@ -32,3 +32,10 @@
   src: url("../fonts/Inter-ExtraBold.ttf") format("ttf");
   font-display: swap;
 }
+
+@font-face {
+  font-family: "Inter-900";
+  font-weight: 900;
+  src: url("../fonts/Inter-Black.ttf") format("ttf");
+  font-display: swap;
+}
