--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -3,6 +3,13 @@
 [class*="__container"] {
   padding: 0 40px;
   margin: 0 auto;
+
+  @media screen and (max-width: 768px) {
+    padding: 0 20px;
+  }
+  @media screen and (max-width: 425px) {
+    padding: 0 10px;
+  }
 }
 
 .violette-button {
