--- a/src/styles/product.scss
+++ b/src/styles/product.scss
@@ -14,6 +14,8 @@
   &__image:hover > div {
     visibility: visible;
     opacity: 1;
+
+    cursor: pointer;
   }
 
   &__image div {
@@ -134,6 +136,8 @@
     color: $white;
     border-radius: $border5;
 
+    cursor: pointer;
+
     font-family: $Inter600;
     font-weight: 600;
     font-size: $text12;
@@ -149,6 +153,8 @@
   &__add-to-favourite {
     width: 30px;
     height: 30px;
+
+    cursor: pointer;
 
     &:hover {
       filter: invert(31%) sepia(83%) saturate(7182%) hue-rotate(333deg) brightness(97%) contrast(102%);
