--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -16,6 +16,7 @@ $Inter500: "Inter-500", "Arial", sans-serif;
 $Inter600: "Inter-600", "Arial", sans-serif;
 $Inter700: "Inter-700", "Arial", sans-serif;
 $Inter800: "Inter-800", "Arial", sans-serif;
+$Inter900: "Inter-900", "Arial", sans-serif;
 
 // font-size
 $text6: 0.375rem;
